k8s/jobstar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobstar
  namespace: jobstar
  labels:
    app: jobstar
spec:
  type: ClusterIP
  selector:
    app: jobstar
  ports:
    - name: http
      port: 80
      targetPort: http
